# mebi_plugin

./: .CoqMakeFile.d  .gitignore  .ocamlformat  CoqMakefile.conf  Makefile  Makefile.rocq  Makefile.rocq.conf  Makefile.rocq.local  README.md  TODO.md  _CoqProject  _RocqProject  coq-mebi.opam  dune-project
doc/: index.html
examples/: Bisimilarity.v  CADP.v  CADP_Bisimilarity.v  CADP_Glued.v  CADP_Spec.v  CADP_simple.v  CADP_v2.v  Proc.v  SimpleCADP.v  simple_CADP.v  simple_layered_lts.v  simple_layered_lts2.v
examples/Bisimilarity/: _nat_streams.v
examples/Bisimilarity/CADP/Properties/: MutualExclusion.v  _mutual_exclusion.v  _no_starvation.v
examples/Bisimilarity/CADP/Size1/: TermTests.v  Terms.v
examples/Bisimilarity/CADP/Size1/Glued/: PluginProofs.v  TermTests.v
examples/Bisimilarity/CADP/Size1/Glued/MutualExclusion/: PluginProofs.v
examples/Bisimilarity/CADP/Size1/MutualExclusion/: PluginProofs.v
examples/Bisimilarity/CADP/Size2/: PluginProofs.v  TermTests.v  Terms.v
examples/Bisimilarity/CADP/Size2/Glued/: PluginProofs.v  TermTests.v
examples/Bisimilarity/CADP/Size2/Glued/MutualExclusion/: PluginProofs.v
examples/Bisimilarity/Proc/Test1/: LtacProofs.v  ManualProofs.v  PluginProofs.v  TermTests.v  Terms.v
examples/Bisimilarity/Proc/Test2/: LtacProofs.v  ManualProofs.v  PluginProofs.v  TermTests.v  Terms.v
examples/Bisimilarity/Proc/Test3/: PluginProofs.v  TermTests.v
examples/Bisimilarity/Proc/Test4/: TermTests.v
examples/bisimilarity/: CADP_simple.v  Proc.v  Proc_old.v  _Proc_old.v  _nat_streams.v  nat_streams.v
examples/bisimilarity/CADP/Size1/: PluginProofs.v  PluginTest.v  TermTests.v  Terms.v
examples/bisimilarity/CADP/Size1/Glued/: PluginProofs.v
examples/bisimilarity/CADP/Size1/Property/: PluginProofs.v
examples/bisimilarity/CADP/Size2/: PluginProofs.v  PluginTest.v  TermTests.v  Terms.v
examples/bisimilarity/CADP/Size3/: PluginTest.v
examples/bisimilarity/CADP/properties/: mutual_exclusion.v  no_starvation.v
examples/bisimilarity/Proc/: Proc.v
examples/bisimilarity/Proc/Test1/: LtacProofs.v  ManualProofs.v  PluginProofs.v  TermTests.v  Terms.v
examples/bisimilarity/Proc/Test2/: LtacProofs.v  ManualProofs.v  PluginProofs.v  TermTests.v  Terms.v
examples/bisimilarity/Proc/Test3/: PluginProofs.v  TermTests.v  Terms.v
examples/bisimilarity/Proc/Test4/: TermTests.v  Terms.v
examples/properties/: mutual_exclusion.v  no_starvation.v
lib/: dune
lib/encoding/: dune
lib/model/: FSM.ml  FSM.mli  LTS.ml  LTS.mli  action.ml  action.mli  actionmap.ml  actionmap.mli  actionpair.ml  actionpair.mli  actionpairs.ml  actionpairs.mli  actions.ml  actions.mli  algorithm_saturate.ml  algorithm_saturate.mli  annotation.ml  annotation.mli  annotation_note.ml  annotation_note.mli  annotations.ml  annotations.mli  dune  edge.ml  edge.mli  edgemap.ml  edgemap.mli  edges.ml  edges.mli  info.ml  info.mli  label.ml  label.mli  labels.ml  labels.mli  model.ml  model.mli  model_.mli  state.ml  state.mli  (+14 more)
lib/model/algorithms/: bisimilarity.ml  bisimilarity.mli  dune  minimization.mli  minimize.ml  minimize.mli  saturate.ml  saturate.mli  saturation.mli
lib/rocq_tools/: bi_encoding.ml  bi_encoding.mli  bindings.ml  bindings.mli  constructor_bindings.ml  constructor_bindings.mli  dune  mebi_theories.ml  mebi_theories.mli  rocq_context.ml  rocq_context.mli  rocq_monad.ml  rocq_monad.mli  rocq_monad_strfy.ml  rocq_monad_strfy.mli  rocq_monad_utils.ml  rocq_monad_utils.mli  rocq_utils.ml  rocq_utils.mli  theories.ml  theories.mli  theories_enc.ml  theories_enc.mli
lib/terms/: base.mli  base_.mli  base_term.ml  base_term.mli  constructor_tree.ml  constructor_tree.mli  constructor_trees.ml  constructor_trees.mli  dune  encoding.ml  encoding.mli  tree.ml  tree.mli  trees.ml  trees.mli
lib/utils/: dune  json.ml  json.mli  logger.ml  logger.mli  output.ml  output.mli  utils.ml  utils.mli  writer.ml  writer.mli
paper/references/: BIB.md
src/: META.coq-mebi  META.rocq-mebi  OLDproof_solver.ml  __utils.ml  _command.ml  _command.mli  _examples.ml  _mebi_help.ml  _rocq_ind.ml  _todo.ml  algorithm_bisimilarity.mli  algorithm_minimize.ml  algorithm_minimize.mli  algorithm_saturate.ml  algorithm_saturate.mli  algorithms.ml  algorithms.mli  api.ml  api.mli  benchmarking.ml  benchmarking.mli  bi_encoding.ml  bi_encoding.mli  bisim_algs.ml  bisim_algs.mli  bisimilar.ml  bisimilarity.ml  bisimilarity.mli  bisimilarity1.mli  command.ml  command.mli  config_loader.ml  config_loader.mli  constr_tree.ml  constr_tree.mli  debug.ml  debug.mli  decoder.ml  decoder.mli  dump_to_file.ml  (+228 more)
src/bisim_lib/: bisim.mlpack  dune  utils.ml  utils.mli
src/encoding/: dune  encoding.ml  encoding.mli
src/lib/: dune  logger.ml  logger.mli  output.ml  output.mli
test/: dune  saturation.ml  saturation.mli  tests.ml  tests.mli
test/coqplugin/: Proc.v
theories/: Bisimilarity.v  Bisimilarity_old.v  CADP.v  CADP_fixes.v  DevTest.v  MQTT.v  Test.v  dune  loader.v
theories/lit/: CADP.v  CADP_v1.v  CADP_v2.v  IoT.v
