(library
 (name mebi_plugin) ; This is the name you will use in
                    ; Coq's `Declare ML Module`, and
                    ; the name of the main OCaml
                    ; module of your plugin.
 (public_name rocq-mebi.mebi) ; This makes the plugin
                              ; installable; recommended, must
                              ; match opam package name.
 (synopsis "MEBI Plugin (src)") ; Synopsis, used in META generation.
 (flags :standard -rectypes -w -27) ; Coq requires the `-rectypes`
                                    ; flag; CoqPP generated code
                                    ; requires to disable warning 27
                                    ; often.
                                    ; (foreign_stubs                     ; we link our plugin with a C
                                    ;  (language c)                      ; library! Optional, of course.
                                    ;  (names ce_get))
 (libraries ; OCaml Libraries we want to link
            ; with, your choice here.
            ; rocq-runtime.vernac ; Needed for vernac extend.
            ; rocq-runtime.plugins.ltac ; Needed for tactic extend.
  rocq-mebi.mebi_lib.utils
  rocq-mebi.mebi_lib.terms
  rocq-mebi.mebi_lib.rocq_tools
  rocq-mebi.mebi_lib.model
  yojson)
 (modules
  decoder
  api ; stores modules created by [loader.v], used by commands
  weak
  graph
  wrapper ; basic plugin commands
  wrapper_results
  proof_solver_statem
  proof_solver_tactic
  proof_solver_theory
  proof_solver_step
  proof_solver ; 
  g_mebi))

(include_subdirs unqualified)

(rocq.pp ; This will let Dune know about Coq's .mlg grammar files.
 (modules g_mebi))
