(library
 (name model)
 (public_name rocq-mebi.mebi_lib.model)
 (libraries
  rocq-runtime.vernac ; Needed for vernac extend.
  rocq-runtime.plugins.ltac ; Needed for tactic extend.
  rocq-mebi.mebi_lib.utils
  rocq-mebi.mebi_lib.terms
  rocq-mebi.mebi_lib.rocq_tools
  yojson)
 (modules
  state
  states
  label
  labels
  annotation_note
  annotation
  annotations
  transition
  transitions
  action
  actions
  actionpair
  actionpairs
  actionmap
  edge
  edges
  edgemap
  state_partition
  info
  LTS
  FSM
  wip_annotation
  wip_trace
  wip_traces
  saturate
  minimize
  bisimilarity
  ; similarity
  model)
 (wrapped false))

; (library
;  (name LTS)
;  (public_name rocq-mebi.mebi_lib.model.lts)
;  (libraries
;   rocq-runtime.vernac ; Needed for vernac extend.
;   rocq-runtime.plugins.ltac ; Needed for tactic extend.
;   rocq-mebi.mebi_lib.utils
;   rocq-mebi.mebi_lib.terms
;   rocq-mebi.mebi_lib.model
;   yojson)
;  (modules LTS)
;  (wrapped false))

; (library
;  (name FSM)
;  (public_name rocq-mebi.mebi_lib.model.fsm)
;  (libraries
;   rocq-runtime.vernac ; Needed for vernac extend.
;   rocq-runtime.plugins.ltac ; Needed for tactic extend.
;   rocq-mebi.mebi_lib.utils
;   rocq-mebi.mebi_lib.terms
;   rocq-mebi.mebi_lib.model
;   rocq-mebi.mebi_lib.model.lts
;   yojson)
;  (modules FSM)
;  (wrapped false))

(include_subdirs unqualified)
