(library
 (name model_components)
 (public_name rocq-mebi.model.components)
 (libraries
  rocq-runtime.vernac ; Needed for vernac extend.
  rocq-runtime.plugins.ltac ; Needed for tactic extend.
  rocq-mebi.utils
  rocq-mebi.terms
  rocq-mebi.rocq_tools
  yojson)
 (modules
  state
  states
  label
  labels
  annotation_note
  annotation
  annotations
  transition
  transitions
  action
  actions
  actionpair
  actionpairs
  actionmap
  edge
  edges
  edgemap
  state_partition
  info)
 (wrapped false))

(library
 (name model_models)
 (public_name rocq-mebi.model.models)
 (libraries
  rocq-runtime.vernac ; Needed for vernac extend.
  rocq-runtime.plugins.ltac ; Needed for tactic extend.
  rocq-mebi.utils
  rocq-mebi.terms
  rocq-mebi.rocq_tools
  rocq-mebi.model.components
  yojson)
 (modules LTS wip_annotation wip_trace wip_traces saturation FSM)
 (wrapped false))

(library
 (name model_algorithms)
 (public_name rocq-mebi.model.algorithms)
 (libraries
  rocq-runtime.vernac ; Needed for vernac extend.
  rocq-runtime.plugins.ltac ; Needed for tactic extend.
  rocq-mebi.utils
  rocq-mebi.terms
  rocq-mebi.rocq_tools
  rocq-mebi.model.components
  rocq-mebi.model.models
  yojson)
 (modules
  minimization
  bisimilarity
  ; similarity
  )
 (wrapped false))

(library
 (name model)
 (public_name rocq-mebi.model)
 (libraries
  rocq-runtime.vernac ; Needed for vernac extend.
  rocq-runtime.plugins.ltac ; Needed for tactic extend.
  rocq-mebi.utils
  rocq-mebi.terms
  rocq-mebi.rocq_tools
  rocq-mebi.model.components
  rocq-mebi.model.models
  rocq-mebi.model.algorithms
  yojson)
 (modules model)
 (wrapped false))

; (library
;  (name LTS)
;  (public_name rocq-mebi.model.lts)
;  (libraries
;   rocq-runtime.vernac ; Needed for vernac extend.
;   rocq-runtime.plugins.ltac ; Needed for tactic extend.
;   rocq-mebi.utils
;   rocq-mebi.terms
;   rocq-mebi.model
;   yojson)
;  (modules LTS)
;  (wrapped false))

; (library
;  (name FSM)
;  (public_name rocq-mebi.model.fsm)
;  (libraries
;   rocq-runtime.vernac ; Needed for vernac extend.
;   rocq-runtime.plugins.ltac ; Needed for tactic extend.
;   rocq-mebi.utils
;   rocq-mebi.terms
;   rocq-mebi.model
;   rocq-mebi.model.lts
;   yojson)
;  (modules FSM)
;  (wrapped false))

(include_subdirs unqualified)
